# dbt-airflow

./: .env.example  .gitignore  pyproject.toml
scripts/: database_init.py
src/dbt_airflow/: __init__.py
